--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -47,10 +47,9 @@
             tools:src="@tools:sample/backgrounds/scenic" />
 
         <TextView
-            android:id="@+id/textView3"
-            android:layout_width="16dp"
-            android:layout_height="15dp"
-            android:layout_marginTop="30dp"
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="@{viewModel.response.copyright}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/mars_image" />
@@ -61,7 +60,8 @@
             android:layout_height="wrap_content"
             android:text="@{viewModel.response.date}"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
 
         <TextView
             android:id="@+id/textView2"
@@ -71,6 +71,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
+        <!--
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
@@ -78,6 +79,7 @@
             android:text="@{viewModel.response.hdurl}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            -->
 
         <TextView
             android:id="@+id/textView5"
@@ -85,7 +87,7 @@
             android:layout_height="wrap_content"
             android:text="@{viewModel.response.media_type}"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <TextView
             android:id="@+id/textView6"
