--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -24,14 +24,15 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.android.marsrealestate.overview.OverviewViewModel" />
+            type="com.example.android.nasaapod.overview.OverviewViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.android.marsrealestate.MainActivity">
+        tools:context="com.example.android.nasaapod.MainActivity">
 
+        <!--
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/photos_grid"
             android:layout_width="0dp"
@@ -48,7 +49,7 @@
             tools:itemCount="16"
             tools:listitem="@layout/list_view_item" />
 
-        <!--
+
         <ImageView
             android:id="@+id/status_image"
             android:layout_width="wrap_content"
@@ -58,6 +59,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:marsApiStatus="@{viewModel.status}" />
+        -->
 
         <ImageView
             android:id="@+id/mars_image"
@@ -138,7 +140,7 @@
             android:text="@{viewModel.response.explanation}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView7" />
-        -->
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
