--- a/NASAApodLoader/app/src/main/res/layout/fragment_overview.xml
+++ b/NASAApodLoader/app/src/main/res/layout/fragment_overview.xml
@@ -56,7 +56,8 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:marsApiStatus="@{viewModel.status}" />
+            app:nasaApiStatus="@{viewModel.status}"
+            android:contentDescription="@null" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
