--- a/NASAApodLoader/app/src/main/res/menu/overflow_menu.xml
+++ b/NASAApodLoader/app/src/main/res/menu/overflow_menu.xml
@@ -22,9 +22,9 @@
         android:id="@+id/show_all_menu"
         android:title="@string/show_all" />
     <item
-        android:id="@+id/show_rent_menu"
-        android:title="@string/show_rent" />
+        android:id="@+id/show_image_menu"
+        android:title="@string/show_image" />
     <item
-        android:id="@+id/show_buy_menu"
-        android:title="@string/show_buy" />
+        android:id="@+id/show_video_menu"
+        android:title="@string/show_video" />
 </menu>
