--- a/NASAApodLoader/app/src/main/res/layout/list_view_item.xml
+++ b/NASAApodLoader/app/src/main/res/layout/list_view_item.xml
@@ -11,12 +11,12 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="170dp">
+        android:layout_height="180dp">
 
         <ImageView
             android:id="@+id/mars_image"
             android:layout_width="190dp"
-            android:layout_height="170dp"
+            android:layout_height="180dp"
             android:adjustViewBounds="true"
             android:padding="2dp"
             android:scaleType="centerCrop"
@@ -28,26 +28,41 @@
             tools:src="@tools:sample/backgrounds/scenic" />
 
         <TextView
-            android:id="@+id/property_type_text"
+            android:id="@+id/property_date_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
             android:text="@{property.date}"
             android:textColor="#de000000"
-            android:textSize="39sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.504"
             app:layout_constraintStart_toEndOf="@+id/mars_image"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="To Rent" />
 
         <TextView
-            android:id="@+id/price_value_text"
+            android:id="@+id/price_title_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{property.title}"
             android:textColor="#de000000"
             android:textSize="20sp"
+            app:layout_constraintTop_toBottomOf="@+id/mars_image"
+            tools:layout_editor_absoluteX="268dp"
+            tools:text="$100,000" />
+
+        <TextView
+            android:id="@+id/property_media_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{property.media_type}"
+            android:textColor="#de000000"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/price_title_text"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/mars_image"
-            app:layout_constraintTop_toBottomOf="@+id/property_type_text"
+            app:layout_constraintTop_toBottomOf="@+id/property_date_text"
             tools:text="$100,000" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
