--- a/NASAApodLoader/app/src/main/res/layout/fragment_detail.xml
+++ b/NASAApodLoader/app/src/main/res/layout/fragment_detail.xml
@@ -21,6 +21,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.android.nasaapod.detail.DetailViewModel" />
+    </data>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -34,8 +40,9 @@
             <ImageView
                 android:id="@+id/main_photo_image"
                 android:layout_width="0dp"
-                android:layout_height="266dp"
+                android:layout_height="400dp"
                 android:scaleType="centerCrop"
+                app:imageUrl="@{viewModel.selectedProperty.url}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -48,6 +55,7 @@
                 android:layout_marginTop="16dp"
                 android:textColor="#de000000"
                 android:textSize="39sp"
+                android:text="@{viewModel.selectedProperty.title}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/main_photo_image"
                 tools:text="To Rent" />
@@ -58,7 +66,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:textColor="#de000000"
-                android:textSize="20sp"
+                android:textSize="18sp"
+                android:text="@{viewModel.selectedProperty.explanation}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/property_date_text"
                 tools:text="$100,000" />
