--- a/NASAApodLoader/app/src/main/res/layout/list_view_item.xml
+++ b/NASAApodLoader/app/src/main/res/layout/list_view_item.xml
@@ -43,26 +43,20 @@
 
         <TextView
             android:id="@+id/price_title_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="181dp"
+            android:layout_height="76dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="16dp"
             android:text="@{property.title}"
             android:textColor="#de000000"
             android:textSize="20sp"
-            app:layout_constraintTop_toBottomOf="@+id/mars_image"
-            tools:layout_editor_absoluteX="268dp"
-            tools:text="$100,000" />
-
-        <TextView
-            android:id="@+id/property_media_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{property.media_type}"
-            android:textColor="#de000000"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/price_title_text"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/mars_image"
             app:layout_constraintTop_toBottomOf="@+id/property_date_text"
+            app:layout_constraintVertical_bias="1.0"
             tools:text="$100,000" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
