--- a/NASAApodLoader/app/src/main/res/layout/fragment_detail.xml
+++ b/NASAApodLoader/app/src/main/res/layout/fragment_detail.xml
@@ -49,6 +49,16 @@
                 tools:src="@tools:sample/backgrounds/scenic" />
 
             <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#61272525"
+                android:textSize="16sp"
+                android:text="@{viewModel.selectedProperty.copyright}"
+                app:layout_constraintEnd_toEndOf="@+id/main_photo_image"
+                app:layout_constraintTop_toBottomOf="@+id/main_photo_image" />
+
+            <TextView
                 android:id="@+id/property_date_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
