--- a/NASAApodLoader/app/src/main/res/layout/fragment_overview.xml
+++ b/NASAApodLoader/app/src/main/res/layout/fragment_overview.xml
@@ -32,6 +32,10 @@
         android:layout_height="match_parent"
         tools:context="com.example.android.nasaapod.MainActivity">
 
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipe"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/photos_grid"
             android:layout_width="0dp"
@@ -58,6 +62,6 @@
             app:layout_constraintTop_toTopOf="parent"
             app:nasaApiStatus="@{viewModel.status}"
              />
-
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
