--- a/NASAApodLoader/app/src/main/res/layout/list_view_item.xml
+++ b/NASAApodLoader/app/src/main/res/layout/list_view_item.xml
@@ -20,6 +20,7 @@
             android:adjustViewBounds="true"
             android:padding="2dp"
             android:scaleType="centerCrop"
+            android:visibility="visible"
             app:imageUrl="@{property.url}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
