Support enddate and HD photo for detail

--- a/NASAApodLoader/app/src/main/res/layout/fragment_detail.xml
+++ b/NASAApodLoader/app/src/main/res/layout/fragment_detail.xml
@@ -27,6 +27,7 @@
             type="com.example.android.nasaapod.detail.DetailViewModel" />
     </data>
 
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -35,14 +36,14 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp">
+            >
 
             <ImageView
                 android:id="@+id/main_photo_image"
-                android:layout_width="0dp"
-                android:layout_height="400dp"
+                android:layout_width="812dp"
+                android:layout_height="765dp"
                 android:scaleType="centerCrop"
-                app:imageUrl="@{viewModel.selectedProperty.url}"
+                app:imageUrl="@{viewModel.selectedProperty.hdurl}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
